--- a/scraping.ipynb
+++ b/scraping.ipynb
@@ -2,15 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'dashboard'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\gmspr\\Documents\\School\\Senior\\Fall 2023\\STAT 386\\project\\personal-budget-tool\\scraper\\scraping.ipynb Cell 1\u001b[0m line \u001b[0;36m9\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/gmspr/Documents/School/Senior/Fall%202023/STAT%20386/project/personal-budget-tool/scraper/scraping.ipynb#W0sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/gmspr/Documents/School/Senior/Fall%202023/STAT%20386/project/personal-budget-tool/scraper/scraping.ipynb#W0sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mseaborn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msns\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/gmspr/Documents/School/Senior/Fall%202023/STAT%20386/project/personal-budget-tool/scraper/scraping.ipynb#W0sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdashboard\u001b[39;00m \u001b[39mimport\u001b[39;00m get_df_ready\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'dashboard'"
      ]
     }
    ],
@@ -28,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -37,18 +40,6 @@
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../../secure/username'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\gmspr\\Documents\\School\\Senior\\Fall 2023\\STAT 386\\project\\personal-budget-tool\\scraper\\scraping.ipynb Cell 2\u001b[0m line \u001b[0;36m6\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/gmspr/Documents/School/Senior/Fall%202023/STAT%20386/project/personal-budget-tool/scraper/scraping.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m get_ipython()\u001b[39m.\u001b[39mrun_line_magic(\u001b[39m'\u001b[39m\u001b[39mrun\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mscraper.py\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/gmspr/Documents/School/Senior/Fall%202023/STAT%20386/project/personal-budget-tool/scraper/scraping.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mscraper\u001b[39;00m \u001b[39mimport\u001b[39;00m BankScraper\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/gmspr/Documents/School/Senior/Fall%202023/STAT%20386/project/personal-budget-tool/scraper/scraping.ipynb#W1sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(\u001b[39m\"\u001b[39;49m\u001b[39m../../secure/username\u001b[39;49m\u001b[39m\"\u001b[39;49m) \u001b[39mas\u001b[39;00m file:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/gmspr/Documents/School/Senior/Fall%202023/STAT%20386/project/personal-budget-tool/scraper/scraping.ipynb#W1sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     username \u001b[39m=\u001b[39m file\u001b[39m.\u001b[39mread()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/gmspr/Documents/School/Senior/Fall%202023/STAT%20386/project/personal-budget-tool/scraper/scraping.ipynb#W1sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m../../secure/password\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m file:\n",
-      "File \u001b[1;32mc:\\Users\\gmspr\\anaconda3\\envs\\stat386\\lib\\site-packages\\IPython\\core\\interactiveshell.py:284\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    277\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[0;32m    278\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    279\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    281\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    282\u001b[0m     )\n\u001b[1;32m--> 284\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../../secure/username'"
      ]
     }
    ],
@@ -68,7 +59,7 @@
     "scraper.login(username, password)\n",
     "df = scraper.getAccountTransactions()\n",
     "scraper.logout()\n",
-    "df.to_csv('secure/scraped_transactions.csv')"
+    "df.to_csv('../secure/scraped_transactions.csv')"
    ]
   },
   {
@@ -82,10 +73,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from scraper.categories import store_categories, overall_categories\n",
+    "from scraper.helper_functions import add_category_column\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import random\n",
     "def make_dummy_data():\n",
     "    dummy = pd.DataFrame()\n",
     "    dummy['date'] = pd.date_range('2023-09-01', '2023-10-31')\n",
@@ -96,20 +92,27 @@
     "        store, category = random.choice(list(store_categories.items()))\n",
     "        descriptions.append(store)\n",
     "        categories.append(category)\n",
-    "        costs.append(round(np.random.gamma(.5, 100, size = 1)[0], 2))\n",
+    "        costs.append(round(np.random.gamma(.5, 100, size = 1)[0], 2) * -1)\n",
     "    \n",
     "    dummy['description'] = descriptions\n",
     "    dummy['category'] = categories\n",
     "    dummy['amount'] = costs\n",
     "    dummy['account'] = 'Credit Card'\n",
-    "    dummy['balance'] = round(dummy['amount'].cumsum(),2)\n",
+    "    \n",
+    "    dummy = add_category_column(dummy)\n",
+    "    dummy = dummy.loc[dummy['category'] != 'Income']\n",
+    "    dummy.loc[len(dummy.index)] = ['2023-10-03', 'Job', 'Income',1000,'checking','Income'] \n",
+    "    dummy.loc[len(dummy.index)+1] = ['2023-9-03', 'Job2', 'Income',1500,'checking','Income'] \n",
+    "    dummy['date'] = pd.to_datetime(dummy['date'])\n",
     "    dummy.sort_values(by='date', ascending=False, inplace=True)\n",
+    "    dummy.reset_index(inplace=True)\n",
+    "    dummy.drop(columns=['index'], axis=1, inplace=True)\n",
     "    dummy.to_csv('dummy_data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
